feature(hw-5): token map
